--- a/Laboratorium05/src/main/resources/application.properties
+++ b/Laboratorium05/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+db.host = localhost;
+db.port = 3306;
+db.name = demo_db;
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${db.host}:${db.port}/${db.name}?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=UTC&character_set_server=utf8mb4
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
 
